plan combination - config, localstorage

--- a/pages/GF_logistics.html
+++ b/pages/GF_logistics.html
@@ -106,7 +106,7 @@
       <span class="sr-only">Loading...</span>
     </div>
     <div class="custom-control custom-switch float-right">
-      <input type="checkbox" class="custom-control-input" id="PlanCombinationSwitch" autocomplete="off">
+      <input type="checkbox" class="custom-control-input" id="PlanCombinationSwitch" autocomplete="off" disabled>
       <label class="custom-control-label" for="PlanCombinationSwitch"></label>
     </div>
     <hr style="margin: 0.5rem 0 1rem 0; width: 100%;" />
@@ -170,7 +170,7 @@
         <button type="button" class="btn btn-danger mb-2" id="PC_deleteAllPlans"></button>
         <button type="button" class="btn btn-info mb-2" id="PC_saveAll"></button>
         <button type="button" class="btn btn-danger mb-2" id="PC_deletePlan" disabled></button>
-        <div id="PlanCombination_chart" style="height: 270px; width: auto; margin: 0 -10px 1rem -10px"></div>
+        <div id="PlanCombination_chart" style="height: 280px; width: auto; margin: 0 -10px 1rem -10px"></div>
         <div class="card">
           <div class="card-header pt-2 pb-2 border-bottom-0">
             <button class="btn btn-link p-0 collapsed" type="button" data-toggle="collapse"
@@ -178,7 +178,7 @@
                     id="PC_Ranking_card_title"></button>
           </div>
           <div id="PC_Ranking_card" class="collapse">
-            <div class="card-body p-2">
+            <div class="card-body p-2" id="PlanCombination_demand_card">
               <div class="card mb-2">
                 <div class="card-header pt-2 pb-2 border-bottom-0">
                   <button class="btn btn-link p-0 collapsed" type="button" data-toggle="collapse"
@@ -592,7 +592,12 @@
     //当用js切换nav显示时, 4.4.1bootstrap会在全部东西处理完后开始切换动画, 避免阻塞, 事先切换nav
     var HTMLSCRIPT_ShownTab = "Anytime";
     try {
-      HTMLSCRIPT_ShownTab = JSON.parse(localStorage.getItem("GF_Logistics_v1.x.x")).TabName;
+      let storage = localStorage.getItem("GF_Logistics_v1.x.x");
+      if (storage === null)
+        storage = localStorage.getItem("GF_Logistics");
+      if (storage === null)
+        storage = localStorage.getItem("GF_Logistics_vDevelop.x.x");
+      HTMLSCRIPT_ShownTab = JSON.parse(storage).TabName;
     } catch (ex) { }
     switch (HTMLSCRIPT_ShownTab) {
       case "Anytime":
@@ -635,6 +640,7 @@
   <script src="../js/plan.js"></script>
   <script src="../js/ranking_main.js"></script>
   <script src="../js/plan_combination_function.js"></script>
+  <script src="../js/plan_combination_localstorage.js"></script>
   <script src="../js/plan_combination_input.js"></script>
   <script src="../js/plan_combination_time_period.js"></script>
   <script src="../js/plan_combination_consumption_plan.js"></script>
