--- a/pages/GF_logistics.html
+++ b/pages/GF_logistics.html
@@ -366,7 +366,7 @@
         </div>
         <!-- setting time period -->
         <div class="col-lg-5 disable-selected-text PC-addTimePeriod p-0 d-none" id="PlanCombination_addTimePeriod">
-          <div class="custom-control custom-switch">
+          <div class="custom-control custom-switch mb-2">
             <input type="checkbox" class="custom-control-input" id="LogisticsConsumptionPlanSwitch" autocomplete="off">
             <label class="custom-control-label" for="LogisticsConsumptionPlanSwitch"
               id="LogisticsConsumptionPlanSwitch_label"></label>
