--- a/pages/GF_logistics.html
+++ b/pages/GF_logistics.html
@@ -51,7 +51,7 @@
   </style>
   <!-- Modal -->
   <div class="modal fade" id="Modal" data-backdrop="static" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-dialog" role="document">
+    <div class="modal-dialog" role="document" style="transition-duration: 0.3s">
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title disable-selected-text" id="Modal_title"></h5>
@@ -184,12 +184,7 @@
               <div id="PC_demand_description" class="mb-2"></div>
               <div id="PlanCombination_demand_re" class="form-row" style="max-width: 980px;"></div>
               <div id="PlanCombination_demand_co" class="form-row" style="max-width: 980px;"></div>
-              <div class="col-lg-12 btn-toolbar p-0 mt-2">
-                <button type="button" class="btn btn-primary" id="PC_startRanking"></button>
-                <div class="spinner-border text-primary ml-2 d-none" role="status" style="border-width: 0.3rem;" id="PC_ranking_loading">
-                  <span class="sr-only">Loading...</span>
-                </div>
-              </div>
+              <button type="button" class="btn btn-primary mt-2" id="PC_startRanking"></button>
             </div>
           </div>
         </div>
