V_offline release script

--- a/pages/GF_logistics.html
+++ b/pages/GF_logistics.html
@@ -10,10 +10,12 @@
   <meta name="keywords" content="少女前线, 后勤, 计算, Girls' Frontline, Logistics Support, Calculator">
   <title>Girls' Frontline Logistics Combination Calculator</title>
 
+  <!-- GF_OFFLINE_VERSION !python -->
+
   <!-- vendor css bootstrap !python-->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
     integrity="sha256-L/W5Wfqfa0sdBNIKN9cG6QA5F2qx4qICmU2VgLruv9Y=" crossorigin="anonymous">
-  <!-- end venfor css bootstrap !python -->
+  <!-- end vendor css bootstrap !python -->
 
   <!-- GF css !python -->
   <!-- 如果修改这些内容还需要修改下面script中重新加载的css文件名 -->
@@ -25,6 +27,7 @@
   <link href="../css/plan_combination.css" rel="stylesheet">
   <!-- end GF css !python -->
 
+  <!-- vendor_js JQ !python -->
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.slim.min.js"
     integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8=" crossorigin="anonymous"></script>
   <script>
@@ -32,6 +35,8 @@
     window.jQuery || document.write('<script src="../vendor/jquery/jquery-3.4.1.slim.min.js"><\/script>');
     //end backup vendor_js JQ !python
   </script>
+  <!-- end vendor_js JQ !python -->
+  <!-- vendor_js bootstrap !python -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha256-OUFW7hFO0/r5aEGTQOz9F/aXQOt+TwqI1Z4fbVvww04=" crossorigin="anonymous"></script>
   <script>
@@ -41,6 +46,7 @@
     window.bootstrap || document.write('<link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"><link href="../lang/languages.css" rel="stylesheet"><link href="../css/slider.css" rel="stylesheet"><link href="../css/button.css" rel="stylesheet"><link href="../css/group.css" rel="stylesheet"><link href="../css/main.css" rel="stylesheet"><link href="../css/plan_combination.css" rel="stylesheet"><script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"><\/script>');
     //end backup vendor bootstrap !python
   </script>
+  <!-- end vendor_js bootstrap !python -->
 </head>
 
 <body class="container-fluid" id="container-fluid">
