--- a/pages/GF_logistics.html
+++ b/pages/GF_logistics.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Girls' Frontline logistics calculator">
   <meta name="author" content="ChantXu">
-  <meta name="keywords" content="少女前线, 后勤, 计算, Girls' Frontline, Logistics Support, Calculator">
+  <meta name="keywords" content="少女前线, 后勤, 资源, 计算, 圣建, Girls' Frontline, Logistics Support, Resource, Calculator">
   <title>Girls' Frontline Logistics Combination Calculator</title>
 
   <!-- GF_OFFLINE_VERSION !python -->
@@ -91,8 +91,8 @@
     <button type="button" class="btn btn-outline-dark btn-regular" id="help">?</button><!-- 必须在这两个标签间加空 !python space-->
     <div class="spinner-border align-middle" id="page_loading" role="status" style="border-width: 0.2rem; height: 1.5rem; width: 1.5rem;">
       <span class="sr-only">Loading...</span>
-    </div>
-    <div class="custom-control custom-switch float-right">
+    </div><!-- 必须在这两个标签间加空 !python space-->
+    <div class="custom-control custom-switch" style="display: inline-flex;">
       <input type="checkbox" class="custom-control-input" style="cursor: pointer;" id="PlanCombinationSwitch" autocomplete="off" disabled>
       <label class="custom-control-label" style="font-size: 16px; cursor: pointer;" for="PlanCombinationSwitch" id="PlanCombinationSwitch_label"></label>
     </div>
