--- a/pages/GF_logistics.html
+++ b/pages/GF_logistics.html
@@ -117,15 +117,15 @@
     </div>
   </div>
   <!-- alert -->
-  <div class="col-lg-7 float-left disable-selected-text alert_card">
-    <div class="alert alert-warning alert-dismissible fade show" id="description" role="alert">
+  <div class="col-lg-7 float-left alert_card">
+    <div class="alert alert-warning alert-dismissible fade show disable-selected-text" id="description" role="alert">
       <span id="description_text" style="color:#000000"></span>
       <button type="button" id="neverShowAgain_description" disabled class="close" data-dismiss="alert" aria-label="Close">
         <span aria-hidden="true">&times;</span>
       </button>
     </div>
-    <div class="alert alert-danger" id="localstorageDoesNotWork" role="alert" style="color: #000000;"></div>
-    <div class="alert alert-warning alert-dismissible fade show" id="localstorageWarning" role="alert">
+    <div class="alert alert-danger disable-selected-text" id="localstorageDoesNotWork" role="alert" style="color: #000000;"></div>
+    <div class="alert alert-warning alert-dismissible fade show disable-selected-text" id="localstorageWarning" role="alert">
       <span id="localstorageWarning_text" style="color:#000000"></span>
       <button type="button" id="neverShowAgain_localstorageWarning" disabled class="close" data-dismiss="alert" aria-label="Close">
         <span aria-hidden="true">&times;</span>
