combination table apply

--- a/pages/GF_logistics.html
+++ b/pages/GF_logistics.html
@@ -345,6 +345,7 @@
                   <th class="QPro"></th>
                   <th class="QRes"></th>
                   <th id="consumption_times_th"></th>
+                  <th id="consumption_action_th"></th>
                 </tr>
               </thead>
               <tbody id="Consumption_tbody">
@@ -585,7 +586,7 @@
         download="GF_logistics_offline.zip" target="_blank;"></a>
     </footer>
     <footer class="col p-0">
-      <a id="version" href="##"></a>
+      <a id="version" style="color: #007bff; text-decoration: none; background-color: transparent;"></a>
     </footer>
   </div>
 
